Bug 261704 - [TwinView] Fullscreen windows dragged to another screen jump back to the original screen after disabling fullscreen
Summary: [TwinView] Fullscreen windows dragged to another screen jump back to the orig...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: xinerama (other bugs)
Version First Reported In: git master
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-31 12:50 UTC by Jeffery MacEachern
Modified: 2011-08-15 17:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeffery MacEachern 2010-12-31 12:50:46 UTC
Version:           SVN (using KDE 4.5.90) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
1) Open a window on screen N, and set it to fullscreen (Alt+F3->Advanced->Fullscreen)
2) Alt+Drag it to another screen, M, so it snaps on
3) Disable Fullscreen

Actual Results:  
The window jumps back to screen N when exiting fullscreen mode.

Expected Results:  
The window should remain on screen M, since it was dragged there.

Using the latest proprietary nVidia drivers with TwinView on Arch Linux, with an unofficial snapshot build of >= 4.6RC1.

I will try take a look into this if I get time, but feel free to fix it meanwhile.
Comment 1 Matthias Fuchs 2011-08-15 17:13:10 UTC
Git commit d35ec6d18377fd872207b88dd39f560a483bcc14 by Matthias Fuchs.
Committed on 28/07/2011 at 23:49.
Pushed by mfuchs into branch 'KDE/4.7'.

Fixes disabling fullscreen for windows using two displays.

Dragging a fullscreen window to another screen and then disabling
fullscreen keeps the window at the new screen.

BUG:261704
FIXED-IN:4.7.1
REVIEW:102103

M  +1    -0    kwin/client.h
M  +21   -3    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/d35ec6d18377fd872207b88dd39f560a483bcc14
Comment 2 Matthias Fuchs 2011-08-15 17:16:29 UTC
Git commit 63604784e610fab38a10eb60a5210d71ded8f12d by Matthias Fuchs.
Committed on 28/07/2011 at 23:49.
Pushed by mfuchs into branch 'master'.

Fixes disabling fullscreen for windows using two displays.

Dragging a fullscreen window to another screen and then disabling
fullscreen keeps the window at the new screen.

BUG:261704
FIXED-IN:4.7.1
REVIEW:102103
(cherry picked from commit d35ec6d18377fd872207b88dd39f560a483bcc14)

M  +1    -0    kwin/client.h
M  +21   -3    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/63604784e610fab38a10eb60a5210d71ded8f12d